--- a/index.html
+++ b/index.html
@@ -8,20 +8,16 @@
     <title>Listagem</title>
 </head>
 <body>
-        <div class="container">
-            <div class="topo">
-                <input type="text" 
-                id="inputNovTarefa" 
-                placeholder="Adicione uma nova tafrefa...." />
+       <div class="container">
+        <div class="inner-container">
+                <h1>Listagem de Tarefas</h1>
 
-                <button id="btnAddTarefa">
-                    <i class="fa fa-plus">+</i>
-
-                </button>
-            </div>
-
-            <ul></ul>
+                <input type="tex"
+                id="tarefa"
+                placeholder="Digite sua tarefa...." />
+                <button onclick()>+</button>
         </div>
+       </div>
 
 
         <script src="script.js"></script>
